--- a/src/app.css
+++ b/src/app.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.centered-content-screen {
+  @apply fixed top-0 bottom-0 right-0 left-0 
+    flex flex-col items-center justify-center;
+}
